@@ -26,28 +26,75 @@
 =================
 
 # DataSketches Java Memory Component
- The goal of this component of the library is to provide high performance access to heap memory or 
- native memory for primitives, primitive arrays, ByteBuffers and memory mapped files. 
- This package is general purpose, has minimal external runtime dependencies and can be used in any 
- application that needs to manage data structures outside the Java heap.
+This Memory component is general purpose, has no external runtime dependencies and can be used in any 
+application that needs to manage data structures inside or outside the Java heap.
+
+The goal of this component of the DataSketches library is to provide high performance access API for accessing four different types of memory resources.  Each of the four resource types is accessed using different API methods in the Memory component.
+
+* **Heap:** Contiguous bytes on the Java Heap constructed by, e.g., *WritableMemory.writableWrap(byte[])* or using the *WritableMemory.allocate(int)* method. For purposes of this document this includes on-heap ByteBuffers constructed using *ByteBuffer.allocate(int)*.
+
+* **DirectByteBuffer:** Contiguous bytes of a ByteBuffer constructed by, e.g., *WritableMemory.writableWrap(ByteBuffer)* where the ByteBuffer was previously constructed using *ByteBuffer.allocateDirect(int)*; or, is a slice() thereof.
+
+* **Direct:** Contiguous bytes off the Java Heap constructed by, e.g., *WritableMemory.allocateDirect(long)* method.
+
+* **Memory-Mapped Files** Contiguous bytes of a file represented in off-heap memory and created using, e.g., the *WritableMemory.writableMap(File)* method. 
 
 Please visit the main [DataSketches website](https://datasketches.apache.org) for more information.
 
-If you are interested in making contributions to this site please see our 
-[Community](https://datasketches.apache.org/docs/Community/) page for how to contact us.
+If you are interested in making contributions to this Memory component please see our 
+[Community](https://datasketches.apache.org/docs/Community/) page.
 
----
+## Release 2.0.0+
+Starting with release *datasketches-memory-2.0.0*, this Memory component supports Java 8 through Java 13. Providing access to the four contiguous byte resources (mentioned above) in Java 8 only requires reflection. However, **Java 9 introduced the Java Platform Module System (JPMS) where access to these internal classes requires starting up the JVM with special JPMS arguments.**   The actual JVM arguments required will depend on how the user intends to use the Memory API, the Java version used to run the user's application and whether the user's application is a JPMS application or not.
 
-## Java Support
-Datasketches Memory currently supports Java 8 up to and including Java 13.
+Also see the [usage instructions](docs/usage-instructions.md) for more information.
 
-__NOTE:__ You may have to provide additional JPMS arguments in order to use the library in Java 9 and above,
-see the [usage instructions](docs/usage-instructions.md) for details.
+## USE AS A LIBRARY (using jars from Maven Central)
+In this environment, the user is using the Jars from Maven Central as a library  dependency and not attempting to build the Memory component from the source code or run the Memory component tests.
 
----
+* If you are running Java 8, no extra JVM arguments are required.
+* If you are running Java 9-13 and only using the **Heap** related API, no extra JVM arguments are required.
 
-## Build Instructions
-__NOTE:__ 
+Otherwise, if you are running Java 9-13 and ...
+
+* If your application **is not a JPMS module** use the following table. Choose the columns that describe your use of the Memory API.  If any of the columns contain a *Yes*, then the JVM argument in the first column of the row containing a *Yes* will be required. If you are not sure the extent of the Memory API being used, there is no harm in specifying all 4 JVM arguments. Note: do not embed any spaces in the full argument.
+
+| JVM Arguments for non-JPMS Applications                | Direct ByteBuffer | Direct | MemoryMapped Files |
+|:------------------------------------------------------:|:----------------:|:------:|:------------------:|
+| --add-exports java.base/jdk.internal.misc= ALL-UNNAMED |                  |  Yes   |                    |
+| --add-exports java.base/jdk.internal.ref= ALL-UNNAMED  |                  |  Yes   | Yes                |
+| --add-opens java.base/java.nio= ALL-UNNAMED            |                  |  Yes   | Yes                |
+| --add-opens java.base/sun.nio.ch= ALL-UNNAMED          |                  |        | Yes                |
+
+* If your application **is a JPMS module** use the following table. Choose the columns that describe your use of the Memory API.  If any of the columns contain a *Yes*, then the JVM argument in the first column of the row containing a *Yes* will be required. If you are not sure the extent of the Memory API being used, there is no harm in specifying all 4 JVM arguments. Note: do not embed any spaces in the full argument.
+
+| JVM Arguments for JPMS Applications                                       | Direct ByteBuffer | Direct | MemoryMapped Files |
+|:-------------------------------------------------------------------------:|:----------------:|:------:|:------------------:|
+| --add-exports java.base/jdk.internal.misc= org.apache.datasketches.memory |                  |  Yes   |                    |
+| --add-exports java.base/jdk.internal.ref= org.apache.datasketches.memory  |                  |  Yes   | Yes                |
+| --add-opens java.base/java.nio= org.apache.datasketches.memory            |                  |  Yes   | Yes                |
+| --add-opens java.base/sun.nio.ch= org.apache.datasketches.memory          |  Yes             |        | Yes                |
+
+
+## DEVELOPER USAGE
+In this environment the developer needs to build the Memory component from source and run the Memory Component tests.  There are two use cases. The first is for a *System Developer* that needs to build and test their own Jar from source for a specific Java version. The second use case is for a *Memory Component Developer and Contributor*.
+
+* System Developer
+    * Compile, test and create a Jar for a specific Java version
+        * use the provided script for this purpose
+
+* Memory Component Developer / Contributor
+    * Compile & test the library from source code using:
+        * Eclipse (version)
+        * IntelliJ (version)
+        * Maven (version)
+        * Command-line or scripts
+    * The developer must have installed in their development system at least JDK versions 8, 9 and 11.
+    * Unless building with the provided script, the developer must have a valid [Maven toolchain configuration](docs/maven-toolchains.md).
+
+
+### Build Instructions
+__NOTES:__ 
 
 1) This component accesses resource files for testing. As a result, the directory elements
    of the full absolute path of the target installation directory must qualify as Java identifiers.
@@ -64,23 +111,17 @@ __NOTE:__
    
    For more information, see this [Maven Reactor Issue](https://issues.apache.org/jira/browse/MNG-3283).
 
-### JDK versions required to compile
-This DataSketches component is pure Java and requires any a JDK hotspot version between 8 and 13 to compile.
-Refer to the section below for instructions on how to build a standalone JAR using a single JDK version.
-
-### JDK versions required to compile the Multi-release JAR
-The following versions of the JDK are all required to compile the multi-release JAR:
+#### JDK versions required to compile
+This DataSketches component is pure Java and requires the following JDKs to compile:
 
 - JDK8/Hotspot
 - JDK9/Hotspot
 - JDK11/Hotspot
 
-These versions are also required in order to build the Maven project in an IDE.
-
 Ensure that your local environment has been configured according to the 
 [Maven Toolchains Configuration](docs/maven-toolchains.md).
 
-### Recommended Build Tool
+#### Recommended Build Tool
 This DataSketches component is structured as a Maven project and Maven is the recommended Build 
 Tool.
 
@@ -116,29 +157,15 @@ This will create the following Jars:
 * datasketches-memory-X.Y.Z-tests.jar The compiled test class files.
 * datasketches-memory-X.Y.Z-sources.jar The main source files.
 * datasketches-memory-X.Y.Z-test-sources.jar The test source files
-* datasketches-memory-X.Y.Z-javadoc.jar  The compressed Javadocs.
+* datasketches-memory-X.Y.Z-javadoc.jar The compressed Javadocs.
 
-### Building a standalone JAR using a single version of the JDK
-A shell script is provided to compile and build a JAR for situations where it is not possible to
-install multiple versions of the JDK in the same build environment.
-
-This script can be found in the **tools/scripts** directory and is invoked from the command line as follows:
-
-    $ ./tools/scripts/compile-package-jar.sh JAVA_HOME GIT_VERSION PROJECT_BASE_DIR
-
-Where:
-
-1) The first argument is the absolute path of JDK home directory e.g. $JAVA_HOME
-2) The second argument is the Git Version Tag for this deployment e.g. 1.0.0-SNAPSHOT, 1.0.0-RC1, 1.0.0 etc.
-3) The third argument is the absolute path of project.basedir e.g. /src/apache-datasketches-memory
-
-### Toolchains
+#### Toolchains
 
 This project makes use of Maven toolchains to ensure that the correct Java compiler version is 
 used when compiling source files.
 See the [Maven Toolchains Configuration](docs/maven-toolchains.md) for more details.
 
-### Dependencies
+#### Dependencies
 
 There are no run-time dependencies.
 
@@ -147,7 +174,7 @@ See the pom.xml file for test dependencies.
 
 ---
 
-## Further documentation for contributors
+### Further documentation for contributors
 
 For more information on the project configuration, the following topics are discussed in more 
 detail:
